--- a/style.css
+++ b/style.css
@@ -3,8 +3,16 @@ body {
     margin: 0;
     padding: 0;
     line-height: 1.6;
-    background-color: #fff8f0;
     color: #333;
+    background-color: #f0d6b9;
+    
+
+  }
+  .container {
+    max-width: 70%;
+    margin: 0 auto;
+    padding: 0 20px;
+    
   }
   header, footer {
     background-color: #e07a5f;
@@ -28,6 +36,7 @@ body {
   }
   main {
     padding: 20px;
+    background-color: #ebba82;
   }
   .card {
     border: 1px solid #ccc;
@@ -64,9 +73,8 @@ body {
 
   .detalhe-receita {
     margin-top: 10px;
-    background: #f9f9f9;
+    background: #e9a076;
     padding: 10px;
-    border-left: 3px solid #ff6600;
     font-size: 0.9em;
     color: #333;
   }
@@ -87,4 +95,58 @@ body {
   .receitas img 
   {
     width: 80%;
+  }
+
+  .carousel-wrapper {
+    max-width: 600px;
+    margin: 0 auto;
+    overflow: hidden;
+    position: relative;
+    padding-bottom: 20px;
+  }
+  
+  .carousel-track {
+    display: flex;
+    overflow: hidden;
+    scroll-behavior: smooth;
+  }
+  
+  .carousel-card {
+    flex: 0 0 90%;
+    background: #e9a076;
+    padding: 20px;
+    border-radius: 10px;
+    font-size: 1.1em;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    margin: 10px;
+  
+    display: flex;
+    flex-direction: column; 
+    align-items: center;     
+    justify-content: center; 
+    text-align: center;
+  }
+  
+  .carousel-controls {
+    text-align: center;
+    margin-top: 10px;
+  }
+  
+  .carousel-controls button {
+    background: #e07a5f;
+    color: white;
+    border: none;
+    padding: 10px 15px;
+    margin: 0 10px;
+    font-size: 1.2em;
+    cursor: pointer;
+    border-radius: 5px;
+  }
+  
+  .carousel-controls button:hover {
+    background: #d65a45;
+  }
+  .carousel-card img
+  {
+    width: 90%;
   }
